# timekeeper

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE.md  README.md  flake.nix  timekeeper.desktop
assets/: main.css
src/: app.rs  args.rs  main.css  main.rs  stopwatch_timer.rs  timer_mode.rs  utils.rs
src/digit/: digit.rs  digits.rs  double_digits.rs  mod.rs  time_digits.rs
