[package]
name = "timer-dioxus"
version = "0.1.0"
authors = ["Inferno214221 <inferno214221@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "1.0.0", features = ["display", "error"] }

dioxus = { version = "0.5", features = ["desktop"] }

# Debug
dioxus-logger = "0.5.1"
soloud = "1.0.5"
tokio = { version = "1.41.1", features = ["full"] }
